2009-12-22  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: simplify highlighter definition.

        https://bugs.webkit.org/show_bug.cgi?id=32869

        * inspector/syntax-highlight-css-expected.txt:
        * inspector/syntax-highlight-javascript-expected.txt:
        * inspector/syntax-highlight.js:
        (frontend_dumpSyntaxHighlight):

2009-12-21  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Reentrancy problem with selection in some edge cases.
        https://bugs.webkit.org/show_bug.cgi?id=32842
        rdar://problem/7449974

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Added.
        * fast/forms/selection-layout-reentry-strange-case.html: Added.

        * platform/mac/accessibility/frame-with-title-expected.txt: Updated since
        the number of layouts is now different.

2009-12-21  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Skip layoutTestController.notifyDone() related test until fix.
        https://bugs.webkit.org/show_bug.cgi?id=31626

        * platform/qt/Skipped: http/tests/misc/set-window-opener-to-null.html added.

2009-12-21  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Eric Seidel.

        Upstream chrome/fast/events/iframe-onload-remove-self-no-crash.html .
        https://bugs.webkit.org/show_bug.cgi?id=32742 .

        * fast/frames/iframe-onload-remove-self-no-crash-expected.txt: Added.
        * fast/frames/iframe-onload-remove-self-no-crash.html: Added.
        * fast/frames/resources/iframe-onload-remove-self-no-crash-child.html: Added.
        * fast/frames/resources/iframe-onload-remove-self-no-crash.js: Added.
        (onWindowLoad):

2009-12-21  Fumitoshi Ukai  <ukai@chromium.org>

        Reviewed by Alexey Proskuryakov.

        Invalid url should raise SYNTAX_ERR exception.
        https://bugs.webkit.org/show_bug.cgi?id=32700
