@@ -1,0 +1,8 @@
+<html>
+<body>
+A new child window. My bar is 100.
+<script>
+  document.bar = 100;
+</script>
+</body>
+</html>
